[gd_scene load_steps=12 format=2]

[ext_resource path="res://Script/EnemyMage.gd" type="Script" id=1]
[ext_resource path="res://Texture/sprite mage.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/Enemy/enemyUI/enemyHP.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/ElementalReaction.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Util/Explotion.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.343, 62.3082 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 62 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 62 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20, 1 )

[node name="EnemyMage" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 35
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, -8 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )
hframes = 10
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.52806, -1.63263 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )

[node name="HP" parent="." instance=ExtResource( 3 )]
margin_left = -35.8917
margin_top = -86.1081
margin_right = 44.1083
margin_bottom = -74.1081
max_value = 20.0
value = 20.0

[node name="Reaction" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AreaCollide" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="left" type="CollisionShape2D" parent="AreaCollide"]
position = Vector2( -19.0312, -2.12132 )
shape = SubResource( 3 )

[node name="right" type="CollisionShape2D" parent="AreaCollide"]
position = Vector2( 28, -2 )
shape = SubResource( 4 )

[node name="top" type="CollisionShape2D" parent="AreaCollide"]
position = Vector2( 3, -66 )
shape = SubResource( 5 )

[node name="bottom" type="CollisionShape2D" parent="AreaCollide"]
position = Vector2( 4, 63 )
shape = SubResource( 6 )

[node name="Explotion" parent="." instance=ExtResource( 5 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Frozen_timeout"]
[connection signal="body_entered" from="AreaCollide" to="." method="_on_AreaCollide_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
